--- a/views/UserViewBookings.xaml
+++ b/views/UserViewBookings.xaml
@@ -16,9 +16,14 @@
     <UserControl.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
     </UserControl.Resources>
-    
 
-    <Grid Background="#eff2f7">
+    <Border Background="White"
+                CornerRadius="10"
+             Width="800"
+                
+                Padding="2" VerticalAlignment="Center">
+
+        <Grid Background="white" Height="400" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="-40,30,0,0">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
@@ -68,11 +73,11 @@
 
             </Style>
         </Grid.Resources>
-        <TextBlock Grid.Row="0" Grid.Column="1" FontSize="24" HorizontalAlignment="Center" Text="View Booking"></TextBlock>
-        <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal" >
-            <RadioButton Content="View All Bookings" Command="{Binding ViewUserBookings}"  Style="{StaticResource tabButton}"   BorderBrush="#784ff2"/>
-            <RadioButton Content="Today Bookings" Style="{StaticResource tabButton}" Command="{Binding ViewUserTodayBooking}"/>
-            <RadioButton Content="Booking History" Style="{StaticResource tabButton}" Command="{Binding ViewUserBookingHistory}" />
+       
+            <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,0,0,30">
+            <RadioButton Content="View All Bookings" Height="50" Width="120" Command="{Binding ViewUserBookings}" FontSize="13" Style="{StaticResource tabButton}"   BorderBrush="#784ff2"/>
+                <RadioButton Content="Today Bookings"  Height="50" Width="120" Style="{StaticResource tabButton}" FontSize="13" Command="{Binding ViewUserTodayBooking}"/>
+                <RadioButton Content="Booking History"  Height="50" Width="120" Style="{StaticResource tabButton}" FontSize="13" Command="{Binding ViewUserBookingHistory}" />
         </StackPanel>
 
         <!--Data grid for View all appointment table-->
@@ -118,4 +123,5 @@
         </DataGrid>
 
     </Grid>
+    </Border>
 </UserControl>
