--- a/views/AddConsult.xaml
+++ b/views/AddConsult.xaml
@@ -26,7 +26,7 @@
 						<ColumnDefinition Width="Auto"/>
 					</Grid.ColumnDefinitions>
 					<StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Left"  Margin="0,10">
-						<TextBlock x:Name="text1" Text="Enter New Consultation Type:" Width="200" VerticalAlignment="Center" FontSize="14" FontWeight="SemiBold" />
+						<TextBlock x:Name="text1" Text="Enter New Department:" Width="160" VerticalAlignment="Center" FontSize="14" FontWeight="Bold" />
                         <TextBox x:Name="addConsultant" Margin="10,0" Width="200" Height="20" PreviewTextInput="TextBox_Consultation" VerticalAlignment="Center"></TextBox>
 					</StackPanel>
 
@@ -37,11 +37,12 @@
                             Margin="2,12"
                             Width="55" Height="20"
                             Foreground="White"
-                            FontSize="13"
+                            FontSize="12"
                             FontWeight="SemiBold"
                             BorderBrush="Black"
-                            BorderThickness="1"
-                           Click="btn1_Click" >
+                            BorderThickness="0"
+                            Click="btn1_Click"
+                            Background="CadetBlue" >
 
 
 						<Button.Style>
