--- a/views/AddDoctor.xaml
+++ b/views/AddDoctor.xaml
@@ -17,7 +17,7 @@
 
         <!-- Main Content -->
 
-        <Border Background="White" CornerRadius="10" Margin="55,60,70,0" Padding="30" VerticalAlignment="Top">
+        <Border Background="White" CornerRadius="10" Margin="55,60,70,0" Padding="30"  VerticalAlignment="Top">
 
             <Grid>
 
@@ -37,24 +37,24 @@
                     <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
 
-                <TextBlock Grid.Row="1"  Margin="0,3,-38,18" Text="Enter the Details" FontSize="18" FontWeight="Bold" Grid.ColumnSpan="2"/>
+                <TextBlock Grid.Row="1"  Margin="0,3,-38,18" Text="Enter the Details" FontSize="24" FontWeight="Bold" Grid.ColumnSpan="2"/>
 
 
                 <StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Left"  Margin="0,10,0,40">
 
-                    <TextBlock x:Name="text1" HorizontalAlignment="Left" Text="Select Consultation Type" Width="200" VerticalAlignment="Center" FontSize="15" FontWeight="SemiBold" />
+                    <TextBlock x:Name="text1" HorizontalAlignment="Left" Text="Select Department" Width="200" VerticalAlignment="Center" FontSize="15" FontWeight="Bold" />
                     <ComboBox x:Name="ConsultType" Width="250" VerticalAlignment="Center" ItemsSource="{Binding consuld}"></ComboBox>
                 </StackPanel>
 
                 <StackPanel Grid.Row="2" Orientation="Horizontal"  HorizontalAlignment="Left" Margin="0,10">
-                    <TextBlock x:Name="text2" Text="Enter the Name" Width="200" VerticalAlignment="Center" FontSize="15" FontWeight="SemiBold"  />
+                    <TextBlock x:Name="text2" Text="Enter the Name" Width="200" VerticalAlignment="Center" FontSize="15" FontWeight="Bold"  />
                     <TextBox x:Name="Doctor" Width="250" VerticalAlignment="Center" />
                 </StackPanel>
 
 
                 <StackPanel Grid.Column="0" Grid.Row="4" Orientation="Horizontal"  HorizontalAlignment="Right" Margin="120,0,0,0">
-                    <Button x:Name="btn1" Content="Add Doctor"  Width="70"
-                            Height="25" Background="CadetBlue" Foreground="White" FontSize="11"
+                    <Button x:Name="btn1" Content="Add Doctor"  Width="90"
+                            Height="25" Background="CadetBlue" Foreground="White" FontSize="14"
                             FontWeight="SemiBold" BorderThickness="0" Click="btn1_Click">
                         <Button.Template>
                             <ControlTemplate TargetType="{x:Type Button}">
@@ -64,7 +64,7 @@
                             </ControlTemplate>
                         </Button.Template>
                     </Button>
-                    <Button x:Name="btn3"  Grid.Row="4" Content="Update Time" HorizontalAlignment="Right"
+                    <!--<Button x:Name="btn3"  Grid.Row="4" Content="Update Time" HorizontalAlignment="Right"
                             VerticalAlignment="Top" Margin="10,0,0,0" Padding="15 5" Width="70"
                             Height="25" Background="CadetBlue" Foreground="White" FontSize="11"
                             FontWeight="SemiBold" BorderThickness="0"  Grid.RowSpan="4" Grid.ColumnSpan="4">
@@ -75,7 +75,7 @@
                                 </Border>
                             </ControlTemplate>
                         </Button.Template>
-                    </Button>
+                    </Button>-->
 
                 </StackPanel>
 
