--- a/views/AddTimings.xaml
+++ b/views/AddTimings.xaml
@@ -17,7 +17,7 @@
 
 
 
-        <Border Background="White" CornerRadius="10" Margin="20,50,20,0" Padding="30" VerticalAlignment="Top" Height="400">
+        <Border Background="White" CornerRadius="10" Margin="20,40,20,0" Padding="30"  VerticalAlignment="Top" Height="410">
 
             <Grid Grid.Row="0" Margin="-4,-54,-4,-108">
 
@@ -42,31 +42,31 @@
 
                 <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Left"  Margin="0,10">
 
-                    <TextBlock x:Name="text8" Text="Registered Doctors:" Width="200" VerticalAlignment="Center" FontSize="14" FontWeight="Bold" />
+                    <TextBlock x:Name="text8" Text="Registered Doctors" Width="200" VerticalAlignment="Center" FontSize="16" FontWeight="Bold" />
                     <ComboBox x:Name="doctorType1" Width="250" VerticalAlignment="Center"  Margin="50,0,0,0" ItemsSource="{Binding DoctorNames}" SelectionChanged="doctorType1_SelectionChanged" />
                 </StackPanel>
                 <StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Left"  Margin="0,10">
 
-                    <TextBlock x:Name="text1" Text="Select Consultation Type:" Width="200" VerticalAlignment="Center" FontSize="14" FontWeight="Bold" />
+                    <TextBlock x:Name="text1" Text="Select Department" Width="200" VerticalAlignment="Center" FontSize="16" FontWeight="Bold" />
                     <ComboBox x:Name="ConsultType1" Width="250" VerticalAlignment="Center" Margin="50,0,0,0" SelectionChanged="ConsultType1_SelectionChanged"/>
                 </StackPanel>
 
 
                 <StackPanel Grid.Row="4" Orientation="Horizontal"  HorizontalAlignment="Left" Margin="0,10">
-                    <TextBlock x:Name="text3" Text="Select From Date: " Width="200" VerticalAlignment="Center" FontSize="14" FontWeight="Bold"/>
+                    <TextBlock x:Name="text3" Text="Select From Date " Width="200" VerticalAlignment="Center" FontSize="16" FontWeight="Bold"/>
                     <DatePicker x:Name="Datepicker1" Width="250" VerticalAlignment="Center" Margin="50,0,0,0" />
                 </StackPanel>
                 <StackPanel Grid.Row="5" Orientation="Horizontal"  HorizontalAlignment="Left" Margin="0,10">
-                    <TextBlock x:Name="text7" Text="Select To Date: " Width="200" VerticalAlignment="Center" FontSize="14" FontWeight="Bold"/>
+                    <TextBlock x:Name="text7" Text="Select To Date " Width="200" VerticalAlignment="Center" FontSize="16" FontWeight="Bold"/>
                     <DatePicker x:Name="Datepicker2" Width="250" VerticalAlignment="Center" Margin="50,0,0,0" />
                 </StackPanel>
                 <StackPanel Grid.Row="6" Orientation="Horizontal" HorizontalAlignment="Left" Margin="0,10">
-                    <TextBlock x:Name="text9" Text="Doctor Availibility" Width="200" VerticalAlignment="Center" FontSize="14" FontWeight="Bold" />
+                    <TextBlock x:Name="text9" Text="Doctor Availibility" Width="200" VerticalAlignment="Center" FontSize="16" FontWeight="Bold" />
                     <CheckBox x:Name="checker1" Width="15" VerticalAlignment="Center"  Margin="50,10" Checked="CheckBox_Checked" Unchecked="CheckBox_Unchecked"/>
-                    <TextBlock x:Name="text10" Text="10-6 on selected date" Width="200" Margin="-40,0" VerticalAlignment="Center" FontSize="11"  />
+                    <TextBlock x:Name="text10" Text="10-6 on selected date" Width="200" Margin="-40,0" VerticalAlignment="Center" FontSize="14" FontWeight="SemiBold"  />
                 </StackPanel>
-                <StackPanel Grid.Row="7" Orientation="Horizontal" HorizontalAlignment="Left" Margin="0,10,0,0">
-                    <TextBlock x:Name="text4" Text="Select From Time:" Width="200" VerticalAlignment="Center" FontSize="14" FontWeight="Bold" />
+                <StackPanel Grid.Row="7" Orientation="Horizontal" HorizontalAlignment="Left" Margin="0,10">
+                    <TextBlock x:Name="text4" Text="Select From Time" Width="200" VerticalAlignment="Center" FontSize="16" FontWeight="Bold" />
                     <ComboBox x:Name="Fromtime1" Width="250" VerticalAlignment="Center" Margin="50,0,0,0" ItemsSource="{Binding StartTime}"  >
                         <ComboBox.ItemTemplate>
                             <DataTemplate>
@@ -78,7 +78,7 @@
                 </StackPanel>
 
                 <StackPanel Grid.Row="8" Orientation="Horizontal"   Margin="0,10">
-                    <TextBlock x:Name="text5" Text="Select To Time:" Width="200" VerticalAlignment="Center"  FontSize="14" FontWeight="Bold" />
+                    <TextBlock x:Name="text5" Text="Select To Time" Width="200" VerticalAlignment="Center"  FontSize="16" FontWeight="Bold" />
                     <ComboBox x:Name="Endtime1" Width="250" VerticalAlignment="Center"  Margin="50,0,0,0"  ItemsSource="{Binding EndTime}">
                         <ComboBox.ItemTemplate>
                             <DataTemplate>
@@ -111,9 +111,9 @@
                 </StackPanel>
 
 
-                <Button x:Name="btn3"  Grid.Row="9"  Content="Update Time" HorizontalAlignment="Center"
+                <Button x:Name="btn3"  Grid.Row="9"  Content="Update Time" HorizontalAlignment="Right"
                             VerticalAlignment="Top" Margin="90,10,0,0" Padding="15 5" Width="90"
-                            Height="30" Background="CadetBlue" Foreground="White" FontSize="11"
+                            Height="30" Background="CadetBlue" Foreground="White" FontSize="13"
                             FontWeight="SemiBold" BorderThickness="0"  Grid.RowSpan="4" Grid.ColumnSpan="4" Click="btn1_Click">
                     <Button.Template>
                         <ControlTemplate TargetType="{x:Type Button}">
