--- a/views/UpdateDoctor.xaml
+++ b/views/UpdateDoctor.xaml
@@ -11,7 +11,7 @@
     <UserControl.DataContext>
         <viewModel:UpdateDoctorViewModel/>
     </UserControl.DataContext>
-    <Border Background="White" CornerRadius="10" Margin="40 100 40 40" Padding="30" VerticalAlignment="Center">
+    <Border Background="White" CornerRadius="10" Margin="40 100 40 40" Padding="30" VerticalAlignment="Top">
 
         <Grid>
 
@@ -36,18 +36,18 @@
 
             <StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Left"  Margin="0,10,0,40">
 
-                <TextBlock x:Name="text1" Text="Select Consultation Type:" Width="200" VerticalAlignment="Center" FontSize="14" FontWeight="Bold" />
+                <TextBlock x:Name="text1" Text="Select Department :" Width="200" VerticalAlignment="Center" FontSize="14" FontWeight="Bold" />
                 <ComboBox x:Name="ConsultType" Width="250" VerticalAlignment="Center" ItemsSource="{Binding Consult}" SelectedItem="{Binding SelectedConsultationtype}"   />
             </StackPanel>
 
             <StackPanel Grid.Row="1" Orientation="Horizontal"  HorizontalAlignment="Left" Margin="0,10">
-                <TextBlock x:Name="text2" Text="Select Doctor Name" Width="200" VerticalAlignment="Center" FontSize="14" FontWeight="Bold"  />
+                <TextBlock x:Name="text2" Text="Select Doctor Name :" Width="200" VerticalAlignment="Center" FontSize="14" FontWeight="Bold"  />
                 <ComboBox x:Name="DoctorType" Width="250" VerticalAlignment="Center" ItemsSource="{Binding DoctorNames}" SelectedItem="{Binding SelectedDoctorName}"  />
             </StackPanel>
 
 
-            <Button x:Name="updatedoc"  Grid.Row="4" Content="Update Doctor" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="70,-30,0,-20" Padding="30 5" Width="120" Height="30" Background="CadetBlue" 
-                    Foreground="White" FontSize="16" FontWeight="Bold" BorderThickness="0" Command="{Binding UpdateDoctor}">
+            <Button x:Name="updatedoc"  Grid.Row="4" Content="Update Doctor" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="70,-30,0,-20" Padding="30 5" Width="120" Height="30" Background="CadetBlue" 
+                    FontSize="11" FontWeight="SemiBold" Foreground="White"  BorderThickness="0" Command="{Binding UpdateDoctor}">
                 <Button.Template>
                     <ControlTemplate TargetType="Button">
                         <Border Background="{TemplateBinding Background}" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}" CornerRadius="5">
