--- a/views/Window2.xaml
+++ b/views/Window2.xaml
@@ -118,7 +118,7 @@
                                 Height="35"
                                 Margin="15,25,0,40">
 
-                    <Image Source="C:\Users\arjkr\source\repos\MVVM_App\images\arjun12 (4).png" Height="30"/>
+                    <Image Source="C:\Users\ashal\source\repos\MVVM_App\images\arjun12 (4).png" Height="30"/>
                     <TextBlock Text="We Care"
                                    Foreground="{StaticResource titleColor2}"
                                    FontSize="20"
@@ -166,7 +166,7 @@
                                  Command="{Binding ShowAddConsultCommand}">
                     <StackPanel Orientation="Horizontal">
                         <fa:FontAwesome Icon="User"  Margin="15,2,0,0" />
-                        <TextBlock Text="Add Consultation Type"  Margin="10,0,0,0"/>
+                        <TextBlock Text="Add Department"  Margin="10,0,0,0"/>
                     </StackPanel>
                 </RadioButton>
             </StackPanel>
@@ -269,7 +269,7 @@
                                      StrokeThickness="2"
                                      >
                                                 <Ellipse.Fill>
-                                                    <ImageBrush ImageSource="C:\Users\arjkr\source\repos\MVVM_App\images\arjun12 (4).png"/>
+                                                    <ImageBrush ImageSource="C:\Users\ashal\source\repos\MVVM_App\images\arjun12 (4).png"/>
                                                 </Ellipse.Fill>
                                             </Ellipse>
                                         </DataTemplate>
@@ -287,7 +287,7 @@
                                                     <DataTemplate>
                                                         <StackPanel Orientation="Horizontal">
 
-                                                            <Image Source="C:\Users\arjkr\source\repos\MVVM_App\images\logout1.png" Width="16" Height="16" VerticalAlignment="Center"/>
+                                                            <Image Source="C:\Users\ashal\source\repos\MVVM_App\images\logout1.png" Width="16" Height="16" VerticalAlignment="Center"/>
 
                                                             <TextBlock Text="Logout" VerticalAlignment="Center"/>
                                                         </StackPanel>
