--- a/views/Window1.xaml
+++ b/views/Window1.xaml
@@ -32,7 +32,7 @@
     </Window.Visibility>
 
     <Window.Background>
-        <ImageBrush ImageSource="https://img.freepik.com/free-vector/clean-medical-background_53876-116875.jpg?size=626" ></ImageBrush>
+        <ImageBrush ImageSource="C:\Users\arjkr\source\repos\MVVM_App\images\h3.jpg" ></ImageBrush>
     </Window.Background>
     <Viewbox>
         <Grid Width="550" Height="800" 
@@ -49,7 +49,7 @@
                 <StackPanel Margin="30"
                             HorizontalAlignment="Center"
                             Width="300"
-                            Height="400"
+                            Height="450"
                             VerticalAlignment="Center">
 
                     <Image Source="https://th.bing.com/th/id/OIP.DWV1_35ib2eqmOk7N5rHXQHaHa?pid=ImgDet"
@@ -147,13 +147,13 @@
                         </Button.Template>
                     </Button>
 
-                    <TextBlock  Margin="0,10,0,0"  VerticalAlignment="Center" HorizontalAlignment="Center">
+                    <TextBlock  Margin="0,10,0,20"  VerticalAlignment="Center" HorizontalAlignment="Center">
                     <Hyperlink NavigateUri=""  >
                         <Run Text="Forgot Password?" FontSize="15"/>
                     </Hyperlink>
                     </TextBlock>
 
-                    <TextBlock  Margin="0,6,0,0" VerticalAlignment="Center" HorizontalAlignment="Center">
+                    <TextBlock  Margin="0,-10,0,0" VerticalAlignment="Center" HorizontalAlignment="Center">
                         <Hyperlink NavigateUri="" 
                                    >
                             <Run Text="Create new account" FontSize="15"/>
