--- a/CustomControls/ConfirmPasswordButton.xaml
+++ b/CustomControls/ConfirmPasswordButton.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="MVVM_App.CustomControls.BindablePasswordBox"
+﻿<UserControl x:Class="MVVM_App.CustomControls.ConfirmPasswordButton"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,16 +6,14 @@
              xmlns:local="clr-namespace:MVVM_App.CustomControls"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-
-        <PasswordBox x:Name="txtpassword" 
+    
+    <PasswordBox x:Name="confirmPassword" 
                              Background="white"
                              Foreground="Gray" 
                              BorderBrush="DarkCyan"
                              BorderThickness="2"
                              FontSize="18" 
-                             Width="300"
+                             Width="370"
                              VerticalAlignment="Center"
                              HorizontalAlignment="center" />
-
-
 </UserControl>
