--- a/views/Window2.xaml
+++ b/views/Window2.xaml
@@ -122,7 +122,7 @@
                                 Height="35"
                                 Margin="15,25,0,40">
 
-                    <Image Source="C:\Users\arjkr\source\repos\MVVM_App\images\Logo.png" Height="30"/>
+                    <Image Source="C:\Users\ashal\source\repos\MVVM_App\images\Logo.png" Height="30"/>
                     <TextBlock Text="We Care"
                                    Foreground="{StaticResource titleColor2}"
                                    FontSize="20"
@@ -275,7 +275,7 @@
                                      StrokeThickness="2"
                                      >
                                                 <Ellipse.Fill>
-                                                    <ImageBrush ImageSource="C:\Users\arjkr\source\repos\MVVM_App\images\arjun12 (4).png"/>
+                                                    <ImageBrush ImageSource="C:\Users\ashal\source\repos\MVVM_App\images\arjun12 (4).png"/>
                                                 </Ellipse.Fill>
                                             </Ellipse>
                                         </DataTemplate>
