--- a/views/Window1.xaml
+++ b/views/Window1.xaml
@@ -156,7 +156,7 @@
                     <TextBlock  Margin="0,-10,0,0" VerticalAlignment="Center" HorizontalAlignment="Center">
                         <Hyperlink NavigateUri="" 
                                    >
-                            <Run Text="Create new account" FontSize="15"/>
+                            <Run MouseDown="Run_MouseDown_1" Text="Create new account" FontSize="15"/>
                         </Hyperlink>
                     </TextBlock>
                 </StackPanel>
