--- a/views/Window1.xaml
+++ b/views/Window1.xaml
@@ -32,7 +32,7 @@
     </Window.Visibility>
 
     <Window.Background>
-        <ImageBrush ImageSource="https://img.freepik.com/free-vector/clean-medical-background_53876-116875.jpg?size=626" ></ImageBrush>
+        <ImageBrush ImageSource="C:\Users\arjkr\source\repos\MVVM_App\images\h3.jpg" ></ImageBrush>
     </Window.Background>
     <Viewbox>
         <Grid Width="550" Height="800" 
@@ -41,7 +41,7 @@
           Margin="10">
 
             <Border Margin="52,142,23,142" 
-                    Background="{StaticResource panelActiveColor}" 
+                    Background="CadetBlue"
                     CornerRadius="15" 
                     
                     BorderBrush="DarkGray" 
