--- a/views/BookAppointment.xaml
+++ b/views/BookAppointment.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="MVVM_App.views.BookAppointment"
+﻿﻿<UserControl x:Class="MVVM_App.views.BookAppointment"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -17,8 +17,6 @@
           Width="700">
 
             <!-- Header - Book Your Appointment -->
-           
-
 
             <!-- Main Content -->
 
@@ -78,7 +76,7 @@
                         <Label x:Name="label1"  Width="200" VerticalAlignment="Center"  FontSize="14" FontWeight="Bold" />
 
                     </StackPanel>
-                  
+
 
 
 
