Seperation Register commit

--- a/views/ChangePassword.xaml
+++ b/views/ChangePassword.xaml
@@ -13,7 +13,7 @@
     </Window.DataContext>
 
     <Window.Background>
-        <ImageBrush ImageSource="C:\Users\arjkr\source\repos\MVVM_App\images\h3.jpg" />
+        <ImageBrush ImageSource="https://img.freepik.com/free-vector/clean-medical-background_53876-116875.jpg?size=626" />
     </Window.Background>
     <Viewbox Stretch="Uniform">
 
